# HarmonyOS-NEXT-UPDATE.APP-Unpack-Tool

./: CMakeLists.txt  README.md  pyproject.toml  unpacker.py  update_app.hexpat  update_bin.hexpat  update_bin_unpacker.py
update_app_unpacker/: unpacker.py
update_app_unpacker/crc_lib/: __init__.py  crc16_lib.c  crc16_lib.h  crc16_lib.py  crc16_lib_py.py
